Added Customer Reviews

--- a/index.html
+++ b/index.html
@@ -388,6 +388,41 @@
                     </div>
                 </div>
             </section>
+            <!--========== Testomonial ==========-->
+            <section>
+            
+             <div class="testimonial">
+                            <p class="testimonial__text mb-25">
+                                It’s a great experience. The ambiance is very welcoming and charming. Amazing food and service. Staff are extremely knowledgeable and make great recommendations.
+                            </p>
+
+                            <div class="testimonial__details">
+                                <div class="testimonial__img">
+                                    <img src="https://images.unsplash.com/photo-1583664426440-daef00e4ad6d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Valerie King" />
+                                </div>
+                                <div class="testimonial__info">
+                                    <h4 class="testimonial__name">
+            Valerie King</h4>
+                                    <h5 class="testimonial__job">Customer Service Representative</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="testimonial">
+                            <p class="testimonial__text mb-25">
+                                The food is always fantastic and no matter what I order I am always delighted with my meal!
+                            </p>
+
+                            <div class="testimonial__details">
+                                <div class="testimonial__img">
+                                    <img src="https://images.unsplash.com/photo-1479936343636-73cdc5aae0c3?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80" alt="Terrell O'Keefe" />
+                                </div>
+                                <div class="testimonial__info">
+                                    <h4 class="testimonial__name">Terrell O'Keefe</h4>
+                                    <h5 class="testimonial__job">Marketing Professional</h5>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
             <!--===== APP =======-->
             <section class="app section bd-container">
